<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddMeal" android:id="@+id/layout">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/button12" android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
                android:id="@+id/layoutBreakfast"
                android:layout_width="149dp"
                android:layout_height="162dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp">

            <ImageView
                    android:layout_width="103dp"
                    android:layout_height="86dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/breakfasttt"
                    app:srcCompat="@drawable/breakfasttt"
                    android:id="@+id/breakfast"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth_bold"
                    android:gravity="center"
                    android:text="@string/breakfast"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/txtbreakfast"/>

        </LinearLayout>
        <LinearLayout
                android:id="@+id/layoutLunch"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="16dp">

            <ImageView
                    android:layout_width="111dp"
                    android:layout_height="88dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/lunchh"
                    app:srcCompat="@drawable/lunchh"
                    android:id="@+id/lunch"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth_bold"
                    android:gravity="center"
                    android:text="@string/lunch"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/txtlunch"/>

        </LinearLayout>
        <LinearLayout
                android:id="@+id/layoutDinner"
                android:layout_width="149dp"
                android:layout_height="156dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutBreakfast" android:layout_marginTop="12dp"
                android:layout_marginStart="16dp">

            <ImageView
                    android:layout_width="107dp"
                    android:layout_height="88dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/dinerr"
                    app:srcCompat="@drawable/dinerr"
                    android:id="@+id/dinner"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth_bold"
                    android:gravity="center"
                    android:text="@string/dinner"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/txtdinner"/>

        </LinearLayout>
        <LinearLayout
                android:id="@+id/layoutBeverage"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutLunch" android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp">

            <ImageView
                    android:layout_width="115dp"
                    android:layout_height="89dp"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/beverages"
                    app:srcCompat="@drawable/beverages"
                    android:id="@+id/beverage"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amaranth_bold"
                    android:gravity="center"
                    android:text="@string/beverage"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/txtbeverage"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
            android:text="Select Meal Item"
            android:layout_width="201dp"
            android:layout_height="wrap_content" android:id="@+id/textView30"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="128dp"
            android:padding="12dp"
            android:hint="Select Meal Item"
            android:fontFamily="@font/amaranthh"
            android:gravity="center_vertical"
            android:drawableEnd="@drawable/ic_dropdown"
            android:background="@android:drawable/editbox_background"
            android:textSize="18sp" android:layout_marginRight="5dp"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/amaranthh"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="44dp" app:layout_constraintHorizontal_bias="0.792" android:background="#03A9F4"
            app:backgroundTint="#2196F3" android:id="@+id/button12" android:text="ADD" android:textColor="#FFFFFF"/>
    <EditText
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="15"
            android:id="@+id/editTextNumber"
            android:fontFamily="@font/amaranthh"
            app:layout_constraintTop_toBottomOf="@+id/textView30"
            app:layout_constraintEnd_toEndOf="parent" android:background="@android:drawable/editbox_background"
            android:layout_marginTop="8dp"
            android:hint="Enter an amount" android:textSize="18sp" android:padding="12dp"
            android:layout_marginRight="5dp"/>
    <TextView
            android:text="HELP?"
            android:layout_width="39dp"
            android:layout_height="29dp" android:id="@+id/textView16"
            android:fontFamily="@font/amaranthh"
            app:layout_constraintTop_toBottomOf="@+id/textView30" android:layout_marginTop="65dp"
            app:layout_constraintEnd_toStartOf="@+id/button12"/>
    <ImageView
            android:layout_width="201dp"
            android:layout_height="262dp" app:srcCompat="@drawable/girl_with_meal" android:id="@+id/imageView11"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView16" android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginLeft="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>